Change action reference to login.php in loginPage

--- a/login/loginPage.html
+++ b/login/loginPage.html
@@ -10,7 +10,7 @@
 
   <div class="login-container">
     <h2>Login</h2>
-    <form id="loginForm" action="test.php" method="POST">
+    <form id="loginForm" action="login.php" method="POST">
 
       <label for="userID">User ID:</label>
       <input type="text" id="userID" name="userID" required>
