--- a/login/loginPage.html
+++ b/login/loginPage.html
@@ -1,31 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Login Page</title>
-</head>
-<body>
-
-  <div class="login-container">
-    <h2>Login</h2>
-    <form id="loginForm" action="login.php" method="POST">
-
-      <label for="userID">User ID:</label>
-      <input type="text" id="userID" name="userID" required>
-
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
-
-      <input type="submit" value="Log In">
-    </form>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,7 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
@@ -98,15 +73,14 @@
 
 <section class="form-container">
 
-   <form action="" method="post" enctype="multipart/form-data">
+   <form id="loginForm" action="login.php" method="post" enctype="multipart/form-data">
       <h3>login now</h3>
       <p>Your User ID <span>*</span></p>
-      <input type="text" name="userId" placeholder="Enter your userID" required maxlength="10" class="box">
+      <input type="text" name="userID" placeholder="Enter your userID" required maxlength="10" class="box">
       <p>Your Password <span>*</span></p>
       <input type="password" name="password" placeholder="Enter Your Password" required maxlength="20" class="box">
-      <input type="submit" value="login new" name="submit" class="btn">
+      <input type="submit" value="login" name="submit" class="btn">
    </form>
-
 </section>
 
 <footer class="footer">
