Implement student login and logout functionality

--- a/login/loginPage.html
+++ b/login/loginPage.html
@@ -21,6 +21,7 @@
 
       <a href="index.html" class="logo">OJT Portal</a>
 
+      <!--
       <form action="search.html" method="post" class="search-form">
          <input type="text" name="search_box" required placeholder="search..." maxlength="100">
          <button type="submit" class="fas fa-search"></button>
@@ -45,9 +46,10 @@
       </div>
 
    </section>
-
+   -->
 </header>   
 
+<!--
 <div class="side-bar">
 
    <div id="close-btn">
@@ -70,6 +72,7 @@
    </nav>
 
 </div>
+-->
 
 <section class="form-container">
 
@@ -85,7 +88,7 @@
 
 <footer class="footer">
 
-   &copy; copyright @ 2023 by <span>Mr. Hev Abi</span> | all rights reserved!
+   &copy; copyright @ 2023 by <span>Team Croods</span> | all rights reserved!
 
 </footer>
 
