--- a/student/index.html
+++ b/student/index.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
@@ -31,15 +31,16 @@
          <div id="search-btn" class="fas fa-search"></div>
          <div id="user-btn" class="fas fa-user"></div>
          <div id="toggle-btn" class="fas fa-sun"></div>
+         <div id="exit-btn" class="fa-solid fa-door-open"></div>
       </div>
 
       <div class="profile">
-         <img src="images/pic-1.jpg" class="image" alt="">
+         <img src="../../images/pic-1.jpg" class="image" alt="">
          <h3 class="name">Hev Abi</h3>
          <p class="role">student</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
-            <a href="login.html" class="option-btn">login</a>
+            <a href="logout.php" class="option-btn">logout</a>
             <a href="register.html" class="option-btn">register</a>
          </div>
       </div>
@@ -55,7 +56,7 @@
    </div>
 
    <div class="profile">
-      <img src="images/pic-1.jpg" class="image" alt="">
+      <img src="../images/pic-1.jpg" class="image" alt="">
       <h3 class="name">Hev Abi</h3>
       <p class="role">student</p>
       <a href="profile.html" class="btn">view profile</a>
@@ -67,6 +68,7 @@
       <a href="companies.html"><i class="fas fa-graduation-cap"></i><span>Available Companies</span></a>
       <a href="user.html"><i class="fas fa-chalkboard-user"></i><span>Network</span></a>
       <a href="contact.html"><i class="fas fa-headset"></i><span>Contact us</span></a>
+      <a href="logout.php"><i class="fa-solid fa-door-open"></i><span>Logout</span></a>
    </nav>
 
 </div>
@@ -133,14 +135,14 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/pic-2.jpg" alt="">
+            <img src="../images/pic-2.jpg" alt="">
             <div class="info">
                <h3>Hev Abi</h3>
                <span>21-10-2023</span>
             </div>
          </div>
          <div class="thumb">
-            <img src="images/thumb-1.png" alt="">
+            <img src="../images/thumb-1.png" alt="">
             <span>JPmorgan</span>
          </div>
          <h3 class="title">Web Developer</h3>
@@ -149,14 +151,14 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/pic-3.jpg" alt="">
+            <img src="../images/pic-3.jpg" alt="">
             <div class="info">
                <h3>john deo</h3>
                <span>21-10-2023</span>
             </div>
          </div>
          <div class="thumb">
-            <img src="images/thumb-2.png" alt="">
+            <img src="../images/thumb-2.png" alt="">
             <span>JPmorgan</span>
          </div>
          <h3 class="title">Web Developer</h3>
@@ -165,14 +167,14 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/pic-4.jpg" alt="">
+            <img src="../images/pic-4.jpg" alt="">
             <div class="info">
                <h3>john deo</h3>
                <span>21-10-2023</span>
             </div>
          </div>
          <div class="thumb">
-            <img src="images/thumb-3.png" alt="">
+            <img src="../images/thumb-3.png" alt="">
             <span>JPmorgan</span>
          </div>
          <h3 class="title">Web Developer</h3>
@@ -181,14 +183,14 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/pic-5.jpg" alt="">
+            <img src="../images/pic-5.jpg" alt="">
             <div class="info">
                <h3>john deo</h3>
                <span>21-10-2023</span>
             </div>
          </div>
          <div class="thumb">
-            <img src="images/thumb-4.png" alt="">
+            <img src="../images/thumb-4.png" alt="">
             <span>JPmorgan</span>
          </div>
          <h3 class="title">Web Developer</h3>
@@ -197,14 +199,14 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/pic-6.jpg" alt="">
+            <img src="../images/pic-6.jpg" alt="">
             <div class="info">
                <h3>john deo</h3>
                <span>21-10-2023</span>
             </div>
          </div>
          <div class="thumb">
-            <img src="images/thumb-5.png" alt="">
+            <img src="../images/thumb-5.png" alt="">
             <span>JPmorgan</span>
          </div>
          <h3 class="title">Web Developer</h3>
@@ -213,14 +215,14 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/pic-7.jpg" alt="">
+            <img src="../images/pic-7.jpg" alt="">
             <div class="info">
                <h3>john deo</h3>
                <span>21-10-2023</span>
             </div>
          </div>
          <div class="thumb">
-            <img src="images/thumb-6.png" alt="">
+            <img src="../images/thumb-6.png" alt="">
             <span>JPmorgan</span>
          </div>
          <h3 class="title">Web Developer</h3>
@@ -256,7 +258,8 @@
 </footer>
 
 <!-- custom js file link  -->
-<script src="js/script.js"></script>
+<script src="../js/script.js"></script>
+
 
    
 </body>
