--- a/login/loginPage.html
+++ b/login/loginPage.html
@@ -12,65 +12,14 @@
    <!-- custom css file link  -->
    <link rel="stylesheet" href="../css/style.css">
 
+   <style>
+      body {
+         padding-left:0px;
+         padding:100px;
+      }
+   </style>
 </head>
 <body>
-
-<header class="header">
-   
-   <section class="flex">
-
-      <a href="index.html" class="logo">OJT Portal</a>
-
-      <form action="search.html" method="post" class="search-form">
-         <input type="text" name="search_box" required placeholder="search..." maxlength="100">
-         <button type="submit" class="fas fa-search"></button>
-      </form>
-
-      <div class="icons">
-         <div id="menu-btn" class="fas fa-bars"></div>
-         <div id="search-btn" class="fas fa-search"></div>
-         <div id="user-btn" class="fas fa-user"></div>
-         <div id="toggle-btn" class="fas fa-sun"></div>
-      </div>
-
-      <div class="profile">
-         <img src="images/pic-1.jpg" class="image" alt="">
-         <h3 class="name">Hev Abi</h3>
-         <p class="role">student</p>
-         <a href="profile.html" class="btn">view profile</a>
-         <div class="flex-btn">
-            <a href="login.html" class="option-btn">login</a>
-            <a href="register.html" class="option-btn">register</a>
-         </div>
-      </div>
-
-   </section>
-
-</header>   
-
-<div class="side-bar">
-
-   <div id="close-btn">
-      <i class="fas fa-times"></i>
-   </div>
-
-   <div class="profile">
-      <img src="images/pic-1.jpg" class="image" alt="">
-      <h3 class="name">Hev Abi</h3>
-      <p class="role">student</p>
-      <a href="profile.html" class="btn">view profile</a>
-   </div>
-
-   <nav class="navbar">
-      <a href="index.html"><i class="fas fa-home"></i><span>Home</span></a>
-      <a href="about.html"><i class="fas fa-question"></i><span>About</span></a>
-      <a href="companies.html"><i class="fas fa-graduation-cap"></i><span>Available Companies</span></a>
-      <a href="user.html"><i class="fas fa-chalkboard-user"></i><span>Network</span></a>
-      <a href="contact.html"><i class="fas fa-headset"></i><span>Contact us</span></a>
-   </nav>
-
-</div>
-
 <section class="form-container">
 
    <form id="loginForm" action="login.php" method="post" enctype="multipart/form-data">
@@ -82,12 +31,6 @@
       <input type="submit" value="login" name="submit" class="btn">
    </form>
 </section>
-
-<footer class="footer">
-
-   &copy; copyright @ 2023 by <span>Mr. Hev Abi</span> | all rights reserved!
-
-</footer>
 
 <!-- custom js file link  -->
 <script src="js/script.js"></script>
