--- a/student/contact.html
+++ b/student/contact.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="/public/css/style.css">
 
 </head>
 <body>
@@ -34,7 +34,7 @@
       </div>
 
       <div class="profile">
-         <img src="images/pic-1.jpg" class="image" alt="">
+         <img src="/public/images/pic-1.jpg" class="image" alt="">
          <h3 class="name">Hev Abi</h3>
          <p class="role">Student</p>
          <a href="profile.html" class="btn">view profile</a>
@@ -55,7 +55,7 @@
    </div>
 
    <div class="profile">
-      <img src="images/pic-1.jpg" class="image" alt="">
+      <img src="/public/images/pic-1.jpg" class="image" alt="">
       <h3 class="name">Hev Abi</h3>
       <p class="role">Student</p>
       <a href="profile.html" class="btn">view profile</a>
@@ -76,7 +76,7 @@
    <div class="row">
 
       <div class="image">
-         <img src="images/contact-img.svg" alt="">
+         <img src="/public/images/contact-img.svg" alt="">
       </div>
 
       <form action="" method="post">
@@ -136,7 +136,7 @@
 </footer>
 
 <!-- custom js file link  -->
-<script src="js/script.js"></script>
+<script src="/public/js/script.js"></script>
 
    
 </body>
